tests/errors/parser/num-without-bitwidth.futil
component main() -> () {
  cells { }
  wires {
    r.in = 1;
  }
  control { }
}
