tests/errors/parser/num-without-bitwidth.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 4:12
  |
4 |     r.in = 1;
  |            ^
  |
  = Expected number with bitwidth (like 32'd10).
